Fix hearthstone card banner not showing card edges.

--- a/src/scss/partials/layouts/_hearthstoneHeroesCarousel.scss
+++ b/src/scss/partials/layouts/_hearthstoneHeroesCarousel.scss
@@ -46,7 +46,10 @@
         height: auto;
         object-fit: cover;
         @media screen and (min-width: $xl_breakpoint) {
-            width: 26rem;
+            width: 20rem;
+        }
+        @media screen and (min-width: $xxl_breakpoint) {
+            width: 24rem;
         }
     }
     h4 {
