--- a/src/scss/partials/utilities/_variables.scss
+++ b/src/scss/partials/utilities/_variables.scss
@@ -7,3 +7,4 @@ $sm-breakpoint: 520px;
 $md-breakpoint: 768px;
 $lg-breakpoint: 992px;
 $xl-breakpoint: 1200px;
+$xxl-breakpoint: 1400px;
